--- a/sass/style.css
+++ b/sass/style.css
@@ -1,1 +1,26 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap");/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap");
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+header i {
+  position: absolute;
+  left: 20px;
+  top: 15px;
+  font-size: 1rem;
+}
+
+header .logo {
+  font-family: "Shrikhand", cursive;
+  font-weight: bold;
+  text-align: center;
+  margin: 0;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1.4rem;
+}/*# sourceMappingURL=style.css.map */
