Mise en place section "découverte"

--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -1,1 +1,7 @@
+$main-color: #E5DEDE;
+$dark-main-color: darken($main-color, 55%);
+$light-main-color: lighten($main-color, 7%);
+$color-primary: #9356DC;
+$btn-color:#DF6FED;
+$color-tertiary: #99E2D0;
 
