--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
 @import "./Utils/variables";
 @import "./Utils/mixins";
 @import "./bases";
