--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -39,6 +39,50 @@
         a{
             @include btn-a;
         }
-
     }
+}
+
+.functioning{
+    display: flex;
+    flex-direction: column;
+    margin: 25px 20px;
+    .functioning_heading{
+        @include large-typography;
+        margin: 10px 0px;
+    }
+    ul{
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        margin: 0;
+        li{
+            list-style-type: none;
+            padding: 17px;
+            margin: 7px 0px;
+            border-radius: 15px;
+            @include medium-typography;
+            background-color: $light-main-color;
+            @include shadow;
+            .circle{
+                color: $color-primary;
+                font-size: 1.2rem;
+                position: relative;
+                left: -25px;
+                top: 1.1px;
+            }
+            .number{
+                color: #FFFFFF;
+                font-size: 0.5rem;
+                position: relative;
+                left: -37px;
+                top: -3px;
+            }
+            .icon{
+                position: relative;
+                left: -15px;
+                color: lighten($dark-main-color,10%);
+                font-size: 0.9rem;
+            }
+        }
+    }   
 }
