--- a/sass/style.css
+++ b/sass/style.css
@@ -50,7 +50,7 @@ header .logo {
   justify-content: center;
 }
 .discovery .discovery_heading {
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 900;
   text-align: center;
   margin: 5px 30px;
@@ -75,4 +75,51 @@ header .logo {
 .discovery .discovery_btn a {
   text-decoration: none;
   color: #FFFFFF;
+}
+
+.functioning {
+  display: flex;
+  flex-direction: column;
+  margin: 25px 20px;
+}
+.functioning .functioning_heading {
+  font-size: 1rem;
+  font-weight: 900;
+  margin: 10px 0px;
+}
+.functioning ul {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+}
+.functioning ul li {
+  list-style-type: none;
+  padding: 17px;
+  margin: 7px 0px;
+  border-radius: 15px;
+  font-size: 0.7rem;
+  font-weight: 600;
+  background-color: #f5f2f2;
+  box-shadow: 4px 4px 10px -5px #5f4b4b;
+}
+.functioning ul li .circle {
+  color: #9356DC;
+  font-size: 1.2rem;
+  position: relative;
+  left: -25px;
+  top: 1.1px;
+}
+.functioning ul li .number {
+  color: #FFFFFF;
+  font-size: 0.5rem;
+  position: relative;
+  left: -37px;
+  top: -3px;
+}
+.functioning ul li .icon {
+  position: relative;
+  left: -15px;
+  color: #7c6262;
+  font-size: 0.9rem;
 }/*# sourceMappingURL=style.css.map */
