--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -43,9 +43,7 @@
 }
 
 .functioning{
-    display: flex;
-    flex-direction: column;
-    margin: 25px 20px;
+    padding: 30px 20px;
     .functioning_heading{
         @include large-typography;
         margin: 10px 0px;
@@ -63,26 +61,83 @@
             @include medium-typography;
             background-color: $light-main-color;
             @include shadow;
+            position: relative;
             .circle{
                 color: $color-primary;
                 font-size: 1.2rem;
-                position: relative;
-                left: -25px;
-                top: 1.1px;
+                position: absolute;
+                left: -10px;
+                top: 15px;
             }
             .number{
                 color: #FFFFFF;
                 font-size: 0.5rem;
-                position: relative;
-                left: -37px;
-                top: -3px;
+                position: absolute;
+                left: -2.5px;
+                top: 21px;
             }
             .icon{
-                position: relative;
-                left: -15px;
+                margin: 0px 10px;
                 color: lighten($dark-main-color,10%);
                 font-size: 0.9rem;
             }
         }
     }   
+}
+
+.restaurant-menu{
+    padding: 30px 20px;
+    background-color: $light-main-color;
+    .restaurant-menu_heading{
+        @include large-typography;
+        margin: 10px 0px;
+    }
+    .restaurant-menu_content{
+        display: flex;
+        flex-direction: column;
+        article{
+            margin: 10px 0px;
+            border-radius: 15px;
+            @include shadow;
+            position: relative;
+            a{
+                text-decoration: none;
+                color: #000000;
+                img{
+                    width: 100%;
+                    height: 160px;
+                    object-fit: cover;
+                    border-radius: 15px 15px 0px 0px;
+                }
+                span{
+                    display: block;
+                    position: absolute;
+                    right: 20px;
+                    top: 15px;
+                    width: 70px;
+                    text-align: center;
+                    height: 25px;
+                    line-height: 25px;
+                    @include light-typography;
+                    background-color: $color-tertiary;
+                    color: darken($color-tertiary,40%);
+                }
+                h3{
+                    @include medium-typography;
+                    margin: 5px 10px;
+                }
+                p{
+                    @include light-typography;
+                    margin: 5px 10px 10px 10px;
+                }
+                i{
+                    color: $dark-main-color;
+                    position: absolute;
+                    right: 20px;
+                    top: 175px;
+                    font-size: 1.1rem;
+                }
+            }
+        }
+    }
 }
