--- a/sass/style.css
+++ b/sass/style.css
@@ -30,7 +30,7 @@ header .logo {
   height: 35px;
   background-color: #E5DEDE;
   line-height: 35px;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   font-weight: 600;
   color: #5f4b4b;
   box-shadow: inset 0px 6px 5px -6px #5f4b4b;
@@ -50,7 +50,7 @@ header .logo {
   justify-content: center;
 }
 .discovery .discovery_heading {
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 900;
   text-align: center;
   margin: 5px 30px;
@@ -58,7 +58,7 @@ header .logo {
 .discovery .discovery_paragraph {
   text-align: center;
   margin: 5px 25px;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   font-weight: 100;
 }
 .discovery .discovery_btn {
@@ -78,12 +78,10 @@ header .logo {
 }
 
 .functioning {
-  display: flex;
-  flex-direction: column;
-  margin: 25px 20px;
+  padding: 30px 20px;
 }
 .functioning .functioning_heading {
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 900;
   margin: 10px 0px;
 }
@@ -98,28 +96,90 @@ header .logo {
   padding: 17px;
   margin: 7px 0px;
   border-radius: 15px;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   font-weight: 600;
   background-color: #f5f2f2;
   box-shadow: 4px 4px 10px -5px #5f4b4b;
+  position: relative;
 }
 .functioning ul li .circle {
   color: #9356DC;
   font-size: 1.2rem;
-  position: relative;
-  left: -25px;
-  top: 1.1px;
+  position: absolute;
+  left: -10px;
+  top: 15px;
 }
 .functioning ul li .number {
   color: #FFFFFF;
   font-size: 0.5rem;
-  position: relative;
-  left: -37px;
-  top: -3px;
+  position: absolute;
+  left: -2.5px;
+  top: 21px;
 }
 .functioning ul li .icon {
-  position: relative;
-  left: -15px;
+  margin: 0px 10px;
   color: #7c6262;
   font-size: 0.9rem;
+}
+
+.restaurant-menu {
+  padding: 30px 20px;
+  background-color: #f5f2f2;
+}
+.restaurant-menu .restaurant-menu_heading {
+  font-size: 1.1rem;
+  font-weight: 900;
+  margin: 10px 0px;
+}
+.restaurant-menu .restaurant-menu_content {
+  display: flex;
+  flex-direction: column;
+}
+.restaurant-menu .restaurant-menu_content article {
+  margin: 10px 0px;
+  border-radius: 15px;
+  box-shadow: 4px 4px 10px -5px #5f4b4b;
+  position: relative;
+}
+.restaurant-menu .restaurant-menu_content article a {
+  text-decoration: none;
+  color: #000000;
+}
+.restaurant-menu .restaurant-menu_content article a img {
+  width: 100%;
+  height: 160px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 15px 15px 0px 0px;
+}
+.restaurant-menu .restaurant-menu_content article a span {
+  display: block;
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  width: 70px;
+  text-align: center;
+  height: 25px;
+  line-height: 25px;
+  font-size: 0.8rem;
+  font-weight: 100;
+  background-color: #99E2D0;
+  color: #278870;
+}
+.restaurant-menu .restaurant-menu_content article a h3 {
+  font-size: 0.8rem;
+  font-weight: 600;
+  margin: 5px 10px;
+}
+.restaurant-menu .restaurant-menu_content article a p {
+  font-size: 0.8rem;
+  font-weight: 100;
+  margin: 5px 10px 10px 10px;
+}
+.restaurant-menu .restaurant-menu_content article a i {
+  color: #5f4b4b;
+  position: absolute;
+  right: 20px;
+  top: 175px;
+  font-size: 1.1rem;
 }/*# sourceMappingURL=style.css.map */
