--- a/sass/Utils/_mixins.scss
+++ b/sass/Utils/_mixins.scss
@@ -1,3 +1,7 @@
+@mixin logo-font-family{
+    font-family: "Shrikhand", cursive;
+}
+
 @mixin light-typography{
     font-size: 0.8rem;
     font-weight: 100;
