--- a/sass/style.css
+++ b/sass/style.css
@@ -87,14 +87,12 @@ footer p a {
   font-weight: 100;
 }
 .discovery .discovery_btn {
-  padding: 5px 10px;
-  height: 30px;
+  padding: 12px 25px;
   background-color: #DF6FED;
-  border-radius: 15px;
+  border-radius: 20px;
   border: none;
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   box-shadow: 4px 4px 10px -5px #5f4b4b;
-  width: 130px;
   margin: 5px 0px;
 }
 .discovery .discovery_btn a {
@@ -207,4 +205,90 @@ footer p a {
   right: 20px;
   top: 175px;
   font-size: 1.1rem;
+}
+
+.menu {
+  background-color: #f5f2f2;
+}
+.menu .restaurant-picture {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.menu .card {
+  border-radius: 20px 20px 0px 0px;
+  background-color: #f5f2f2;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: -40px;
+}
+.menu .card .card_heading {
+  padding: 30px 15px 0px 15px;
+  margin: 0;
+  font-family: "Shrikhand", cursive;
+  font-size: 1.4rem;
+  position: relative;
+}
+.menu .card .card_heading i {
+  color: #5f4b4b;
+  position: absolute;
+  right: 33px;
+  top: 35px;
+}
+.menu .card .card_content h3 {
+  margin: 25px 15px 3px 15px;
+  font-weight: 200;
+  font-size: 0.9rem;
+}
+.menu .card .card_content .underline {
+  width: 35px;
+  height: 3px;
+  margin: 0px 0px 0px 15px;
+  background-color: #99E2D0;
+}
+.menu .card .card_content ul {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+}
+.menu .card .card_content ul li {
+  list-style-type: none;
+  line-height: 25px;
+  margin: 7px 15px;
+  padding: 7px 12px;
+  border-radius: 15px;
+  background-color: #FFFFFF;
+  box-shadow: 4px 4px 10px -5px #5f4b4b;
+}
+.menu .card .card_content ul li h4 {
+  font-size: 0.8rem;
+  font-weight: 600;
+  margin: 0;
+}
+.menu .card .card_content ul li p {
+  font-size: 0.8rem;
+  font-weight: 100;
+  margin: 0;
+  position: relative;
+}
+.menu .card .card_content ul li p .price {
+  font-weight: bold;
+  position: absolute;
+  right: 7px;
+}
+.menu .card .card_btn {
+  padding: 12px 25px;
+  background-color: #DF6FED;
+  border-radius: 20px;
+  border: none;
+  font-size: 0.8rem;
+  box-shadow: 4px 4px 10px -5px #5f4b4b;
+  margin: auto;
+  margin-top: 35px;
+}
+.menu .card .card_btn a {
+  text-decoration: none;
+  color: #FFFFFF;
 }/*# sourceMappingURL=style.css.map */
