--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -2,6 +2,6 @@ $main-color: #E5DEDE;
 $dark-main-color: darken($main-color, 55%);
 $light-main-color: lighten($main-color, 7%);
 $color-primary: #9356DC;
-$btn-color:#DF6FED;
+$color-secondary:#FF79DA;
 $color-tertiary: #99E2D0;
 
