--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -5,6 +5,7 @@ header{
         margin: 0;
         line-height: 50px;
         font-size: 1.4rem;
+        position: relative;
         i{
             position: absolute;
             left: 20px;
