--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -4,4 +4,8 @@ $light-main-color: lighten($main-color, 7%);
 $color-primary: #9356DC;
 $color-secondary:#FF79DA;
 $color-tertiary: #99E2D0;
+$breakpoints: (
+  tablet: 768px,
+  desktop: 1024px,
+);
 
