--- a/sass/_bases.scss
+++ b/sass/_bases.scss
@@ -1,6 +1,9 @@
 body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    min-width: 320px;
+    max-width: 1400px;
+    margin: auto;
 }
 
 *{
