--- a/sass/style.css
+++ b/sass/style.css
@@ -82,22 +82,23 @@ footer p a {
 .discovery {
   align-items: center;
   background-color: #f5f2f2;
-  height: 170px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 30px;
+  gap: 20px;
 }
 .discovery .discovery_heading {
   font-size: 1.1rem;
   font-weight: 900;
+  margin: 0px 30px;
   text-align: center;
-  margin: 5px 30px;
 }
 .discovery .discovery_paragraph {
-  text-align: center;
-  margin: 5px 25px;
   font-size: 0.8rem;
   font-weight: 100;
+  margin: 0;
+  text-align: center;
 }
 .discovery .discovery_btn {
   padding: 12px 25px;
@@ -106,7 +107,6 @@ footer p a {
   border: none;
   font-size: 0.8rem;
   box-shadow: 4px 4px 10px -5px #5f4b4b;
-  margin: 5px 0px;
 }
 .discovery .discovery_btn a {
   text-decoration: none;
@@ -114,16 +114,15 @@ footer p a {
 }
 
 .functioning {
-  padding: 30px 20px;
+  padding: 35px 20px;
 }
 .functioning .functioning_heading {
   font-size: 1.1rem;
   font-weight: 900;
-  margin: 10px 0px;
+  margin: 0px 0px 20px 0px;
 }
 @media screen and (min-width: 768px) {
   .functioning .functioning_heading {
-    margin: 10px 0px 20px 0px;
     text-align: center;
   }
 }
@@ -132,17 +131,17 @@ footer p a {
   flex-direction: column;
   padding: 0;
   margin: 0;
+  gap: 13px;
 }
 @media screen and (min-width: 768px) {
   .functioning ul {
     align-items: center;
-    gap: 10px;
+    gap: 20px;
   }
 }
 .functioning ul li {
   list-style-type: none;
   padding: 17px;
-  margin: 7px 0px;
   border-radius: 15px;
   font-size: 0.8rem;
   font-weight: 600;
@@ -187,39 +186,33 @@ footer p a {
 }
 
 .restaurant-menu {
-  padding: 30px 20px;
+  padding: 35px 20px;
   background-color: #f5f2f2;
 }
 .restaurant-menu .restaurant-menu_heading {
   font-size: 1.1rem;
   font-weight: 900;
-  margin: 10px 0px;
-}
-@media screen and (min-width: 768px) {
-  .restaurant-menu .restaurant-menu_heading {
-    margin: 10px 0px 20px 0px;
-  }
+  margin: 0px 0px 20px 0px;
 }
 .restaurant-menu .restaurant-menu_content {
   display: flex;
   flex-direction: column;
+  gap: 13px;
 }
 @media screen and (min-width: 768px) {
   .restaurant-menu .restaurant-menu_content {
     flex-wrap: wrap;
-    gap: 15px;
+    gap: 20px;
     flex-direction: row;
   }
 }
 .restaurant-menu .restaurant-menu_content article {
-  margin: 10px 0px;
   border-radius: 15px;
   box-shadow: 4px 4px 10px -5px #5f4b4b;
   position: relative;
 }
 @media screen and (min-width: 768px) {
   .restaurant-menu .restaurant-menu_content article {
-    margin: 10px;
     flex: 1 1 40%;
   }
 }
@@ -316,7 +309,7 @@ footer p a {
   }
 }
 .menu .card .card_content h3 {
-  margin: 25px 15px 0px 15px;
+  margin: 30px 15px 0px 15px;
   font-weight: 200;
   font-size: 0.9rem;
 }
@@ -328,7 +321,7 @@ footer p a {
 .menu .card .card_content .underline {
   width: 35px;
   height: 3px;
-  margin: 6px 0px 10px 15px;
+  margin: 5px 0px 12px 15px;
   background-color: #99E2D0;
 }
 @media screen and (min-width: 768px) {
@@ -341,8 +334,9 @@ footer p a {
 .menu .card .card_content ul {
   display: flex;
   flex-direction: column;
-  padding: 0;
+  padding: 0px 15px;
   margin: 0;
+  gap: 13px;
 }
 @media screen and (min-width: 768px) {
   .menu .card .card_content ul {
@@ -352,7 +346,6 @@ footer p a {
 .menu .card .card_content ul li {
   list-style-type: none;
   line-height: 25px;
-  margin: 7px 15px;
   padding: 7px 12px;
   border-radius: 15px;
   background-color: #FFFFFF;
