--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -1,3 +1,25 @@
+.load{
+    position: fixed;
+    z-index: 1;
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: charged-load 0s 3.6s both;
+    &::after{
+        content: "";
+        display: block;
+        width: 50px;
+        height: 50px;
+        border-radius: 50px;
+        border: 4px solid;
+        border-color: $color-primary #FFFFFF $color-primary #FFFFFF;
+        animation: loading 1.2s ease 3 both;
+    }
+}
+
 .location{
     text-align: center;
     margin: 0;
