--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -2,6 +2,7 @@
     position: fixed;
     z-index: 1;
     background-color: #FFFFFF;
+    max-width: 1400px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -20,45 +21,51 @@
     }
 }
 
-.location{
-    text-align: center;
-    margin: 0;
-    height: 35px;
-    background-color: $main-color;
-    line-height: 35px;
-    @include medium-typography;
-    color: $dark-main-color;
-    box-shadow: inset 0px 6px 5px -6px $dark-main-color;
-    i{
-        color: $dark-main-color;
-        margin-right: 7px;
-        font-size: 0.8rem;
-    }
-}
-
-.discovery{
-    align-items: center;
-    background-color: $light-main-color;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 30px;
-    gap: 20px;
-    .discovery_heading{
-        @include large-typography;
-        margin: 0px 30px;
+.search{
+    .search_position{
         text-align: center;
-    }
-    .discovery_paragraph{
-        @include light-typography;
         margin: 0;
-        text-align: center;
+        height: 35px;
+        background-color: $main-color;
+        line-height: 35px;
+        @include medium-typography;
+        color: $dark-main-color;
+        box-shadow: inset 0px 6px 5px -6px $dark-main-color;
+        i{
+            color: $dark-main-color;
+            margin-right: 7px;
+            font-size: 0.8rem;
+        }
     }
-    .discovery_btn{
-        @include btn;
-        @include shadow;
-        a{
-            @include btn-a;
+    .search_discovery{
+        align-items: center;
+        background-color: $light-main-color;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 30px;
+        gap: 20px;
+        .search_discovery_heading{
+            @include large-typography;
+            margin: 0px 30px;
+            text-align: center;
+        }
+        .search_discovery_paragraph{
+            @include light-typography;
+            margin: 0;
+            text-align: center;
+        }
+        .search_discovery_btn{
+            @include btn;
+            @include shadow;
+            &:hover{
+                filter: brightness(1.2);
+                box-shadow: 4px 4px 10px -5px darken($dark-main-color,60%);
+                transition: all 0.3s ease-in;
+            }
+            a{
+                @include btn-a;
+            }
         }
     }
 }
@@ -72,7 +79,7 @@
             text-align: center;
         }
     }
-    ul{
+    .functioning_content{
         display: flex;
         flex-direction: column;
         padding: 0;
@@ -97,24 +104,28 @@
             @include desktop-only{
                 width: 60%;
             }
-            .circle{
+            .functioning_content_circle{
                 color: $color-primary;
                 font-size: 1.2rem;
                 position: absolute;
                 left: -10px;
                 top: 15px;
             }
-            .number{
+            .functioning_content_number{
                 color: #FFFFFF;
                 font-size: 0.5rem;
                 position: absolute;
                 left: -2.5px;
                 top: 21px;
             }
-            .icon{
+            .functioning_content_icon{
                 margin: 0px 10px;
                 color: lighten($dark-main-color,10%);
                 font-size: 0.9rem;
+                &:hover{
+                    color: $color-primary;
+                    transition: 0.2s ease-in;
+                }
                 @include tablet-only{
                     margin: 0px 3px 0px 0px;
                 }
@@ -179,12 +190,25 @@
                     @include light-typography;
                     margin: 5px 10px 10px 10px;
                 }
-                i{
-                    color: $dark-main-color;
-                    position: absolute;
-                    right: 20px;
-                    top: 175px;
-                    font-size: 1.1rem;
+            }
+            i{
+                color: $dark-main-color;
+                position: absolute;
+                right: 20px;
+                top: 175px;
+                font-size: 1.1rem;
+            }
+            .fa-solid{
+                background: linear-gradient(177deg,$color-primary,$color-secondary);
+                background-clip: text;
+                -webkit-text-fill-color: transparent;
+                transform: scale(0);
+            }
+            .fa-regular{
+                &:active{
+                    & + .fa-solid{
+                        animation: completed 1s ease both;
+                    }
                 }
             }
         }
