--- a/sass/_bases.scss
+++ b/sass/_bases.scss
@@ -1,6 +1,5 @@
 body{
     font-family: 'Roboto', sans-serif;
-    margin: 0;
     min-width: 320px;
     max-width: 1400px;
     margin: auto;
@@ -31,5 +30,36 @@ body{
     100%{
         opacity: 0;
         z-index: -1;
+    }
+}
+
+@keyframes completed{
+    0%{
+        transform: scale(0);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+@keyframes appearance{
+    0%{
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    25%{
+        opacity: 0.25;
+        transform: translateY(7px);
+    }
+    50%{
+        opacity: 0.5;
+        transform: translateY(4px);
+    }
+    75%{
+        opacity: 0.75;
+        transform: translateY(2px);
+    }
+    100%{
+        opacity: 1;
     }
 }
