Duplication pages html "menu"

--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -219,6 +219,15 @@
                     }
                 }
             }
+            @include desktop-only{
+                .fa-regular{
+                    &:hover{
+                        & + .fa-solid{
+                            animation: completed 1s ease both;
+                        }
+                    }
+                }
+            }
         }
     }
 }
