--- a/css/style.css
+++ b/css/style.css
@@ -359,12 +359,18 @@ footer p a {
 .restaurant-menu .restaurant-menu_content article .fa-regular:active + .fa-solid {
   animation: completed 1s ease both;
 }
+@media screen and (min-width: 1024px) {
+  .restaurant-menu .restaurant-menu_content article .fa-regular:hover + .fa-solid {
+    animation: completed 1s ease both;
+  }
+}
 
 .menu {
   background-color: #f5f2f2;
 }
 .menu .restaurant-picture {
   width: 100%;
+  height: 250px;
   object-fit: cover;
 }
 @media screen and (min-width: 768px) {
@@ -405,6 +411,11 @@ footer p a {
 }
 .menu .card .card_heading .fa-regular:active + .fa-solid {
   animation: completed 1s ease both;
+}
+@media screen and (min-width: 1024px) {
+  .menu .card .card_heading .fa-regular:hover + .fa-solid {
+    animation: completed 1s ease both;
+  }
 }
 .menu .card .card_content h3 {
   margin: 30px 15px 0px 15px;
@@ -473,6 +484,9 @@ footer p a {
 .menu .card .card_content ul .card_content_dish:nth-child(3) {
   animation: appearance 0.4s 0.5s cubic-bezier(0.69, 0.67, 0.82, 0.81) both;
 }
+.menu .card .card_content ul .card_content_dish:nth-child(4) {
+  animation: appearance 0.4s 0.7s cubic-bezier(0.69, 0.67, 0.82, 0.81) both;
+}
 .menu .card .card_content ul .card_content_dish .card_content_dish_entitled {
   display: flex;
   flex-direction: column;
@@ -506,6 +520,12 @@ footer p a {
   transform: translateX(-50px);
   margin-left: 50px;
 }
+@media screen and (min-width: 1024px) {
+  .menu .card .card_content ul .card_content_dish:hover > .card_content_dish_price {
+    transform: translateX(-50px);
+    margin-left: 50px;
+  }
+}
 .menu .card .card_content ul .card_content_dish .card_content_dish--select {
   width: 50px;
   height: 58px;
@@ -520,6 +540,11 @@ footer p a {
 .menu .card .card_content ul .card_content_dish:active > .card_content_dish--select {
   transform: translateX(0);
 }
+@media screen and (min-width: 1024px) {
+  .menu .card .card_content ul .card_content_dish:hover > .card_content_dish--select {
+    transform: translateX(0);
+  }
+}
 .menu .card .card_content ul .card_content_dish i {
   color: #FFFFFF;
   margin: 21px 17px;
@@ -530,6 +555,11 @@ footer p a {
 }
 .menu .card .card_content ul .card_content_dish:active > i {
   transform: translateX(0) rotate(1turn);
+}
+@media screen and (min-width: 1024px) {
+  .menu .card .card_content ul .card_content_dish:hover > i {
+    transform: translateX(0) rotate(1turn);
+  }
 }
 .menu .card .card_btn {
   padding: 12px 25px;
