--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -2,6 +2,7 @@
     background-color: $light-main-color;
     .restaurant-picture{
         width: 100%;
+        height: 250px;
         object-fit: cover;
         @include tablet-only{
             height: 450px;
@@ -38,6 +39,15 @@
                 &:active{
                     & + .fa-solid{
                         animation: completed 1s ease both;
+                    }
+                }
+            }
+            @include desktop-only{
+                .fa-regular{
+                    &:hover{
+                        & + .fa-solid{
+                            animation: completed 1s ease both;
+                        }
                     }
                 }
             }
@@ -98,6 +108,9 @@
                     &:nth-child(3){
                         animation: appearance 0.4s 0.5s cubic-bezier(.69,.67,.82,.81) both;
                     }
+                    &:nth-child(4){
+                        animation: appearance 0.4s 0.7s cubic-bezier(.69,.67,.82,.81) both;
+                    }
                     .card_content_dish_entitled{
                         display: flex;
                         flex-direction: column;
@@ -130,6 +143,14 @@
                             margin-left:50px;
                         }
                     }
+                    @include desktop-only{
+                        &:hover{
+                            & > .card_content_dish_price{
+                                transform: translateX(-50px);
+                                margin-left:50px;
+                            }
+                        }
+                    }
                     .card_content_dish--select{
                         width: 50px;
                         height: 58px;
@@ -146,6 +167,13 @@
                             transform: translateX(0);
                         }
                     }
+                    @include desktop-only{
+                        &:hover{
+                            & > .card_content_dish--select{
+                                transform: translateX(0);
+                            }
+                        }
+                    }
                     i{
                         color: #FFFFFF;
                         margin: 21px 17px;
@@ -157,6 +185,13 @@
                     &:active{
                         & > i{
                             transform: translateX(0) rotate(1turn);
+                        }
+                    }
+                    @include desktop-only{
+                        &:hover{
+                            & > i{
+                                transform: translateX(0) rotate(1turn);
+                            }
                         }
                     }
                 }
