--- a/sass/_bases.scss
+++ b/sass/_bases.scss
@@ -1,7 +1,8 @@
 body{
     font-family: 'Roboto', sans-serif;
-    min-width: 320px;
+    min-width: 300px;
     max-width: 1400px;
+    overflow-x: hidden;
     margin: auto;
 }
 
