--- a/css/style.css
+++ b/css/style.css
@@ -96,19 +96,24 @@ footer .logo {
   font-size: 0.9rem;
   margin: 10px 0px 15px 0px;
 }
-footer p {
-  margin: 10px 0px;
-  line-height: 23px;
+footer ul {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  padding: 0;
+}
+footer ul li {
+  list-style: none;
   font-size: 0.8rem;
   font-weight: 100;
 }
-footer p i {
+footer ul li i {
   margin-right: 10px;
 }
-footer p .fa-handshake-angle {
+footer ul li .fa-handshake-angle {
   font-size: 0.6rem;
 }
-footer p a {
+footer ul li a {
   text-decoration: none;
   color: #FFFFFF;
 }
